--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "element-plus": "^2.6.3",
     "lodash-es": "^4.17.21",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
