--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "element-plus": "^2.6.3",
     "lodash-es": "^4.17.21",
     "vue": "^3.5.6",
